starting with channel management
https://github.com/SUSE/spacewalk/issues/8361

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -1,8 +1,6 @@
 [[channel-management]]
 = Channel Management
 
-
-
 Channels are a method of grouping software packages.
 
 In {productname}, channels are grouped into base and child channels, with base channels grouped by operating system type, version, and architecture, and child channels being compatible with their related base channel.
@@ -13,19 +11,21 @@ While {productname} provides all required channels, you might find it useful to 
 {productname} Administrators and Channel Administrators have channel management authority, which gives them the ability to create and manage their own custom channels.
 
 [NOTE]
-===
+====
 When you subscribe to a vendor channel with a traditional client, the product package will automatically be installed.
 On Salt clients, the packages will be added to the package state, and you will need to apply the highstate to push the changes to your systems.
-===
+====
 
 This section gives more detail on how to create, administer, and delete custom channels.
 
-== Create Custom Channels
+
+
+== Creating Custom Channels
 
 If you have custom software packages that you need to install on your {productname} systems, you can create a custom child channel to manage them.
 You will need to create the channel in the {productname} {webui} and create a repository for the packages, before assigning the channel to your systems.
 
-Note that if you include a package with [systemitem]``-release`` at the end of the package name in your channel, it will be automatically installed when the channel is installed.
+If you include a package with [systemitem]``-release`` at the end of the package name in your channel, it will be automatically installed when the channel is installed.
 
 [IMPORTANT]
 ====
