fix command line error
https://github.com/SUSE/spacewalk/issues/8579
https://bugzilla.suse.com/show_bug.cgi?id=1096426

--- a/adoc/bp_live_patching.adoc
+++ b/adoc/bp_live_patching.adoc
@@ -117,9 +117,9 @@ You will also add the SLE Live Patching child channels to your client.
 +
 
 ----
-{prompt.root}spacewalk-manage-channel-lifecycle -promote -c dev-sles{sles-version}-sp{sp-ver}-pool-x86_64
+{prompt.root}spacewalk-manage-channel-lifecycle --promote -c dev-sles{sles-version}-sp{sp-ver}-pool-x86_64
 ----
-. From the {productname} {webui} under the menu:Systems[] tab select your client system to view the menu:System Details[] page. Select menu:Software[Software Channels] . From the Software Channels page you can edit which channels a system is subscribed to. Select the new base software channel, in this case it should be [systemitem]``test-sles12-sp3-pool-x86_64`` . Click the menu:Confirm[] button to switch the Base Software Channel and finalize it by clicking the menu:Modify Base Software Channel[] button.
+. From the {productname} {webui} under the menu:Systems[] tab select your client system to view the menu:System Details[] page. Select menu:Software[Software Channels]. From the Software Channels page you can edit which channels a system is subscribed to. Select the new base software channel, in this case it should be [systemitem]``test-sles12-sp3-pool-x86_64``. Click the menu:Confirm[] button to switch the Base Software Channel and finalize it by clicking the menu:Modify Base Software Channel[] button.
 . From the menu:Software Channels[] page select and add both SLE Live Patching child channels by clicking the menu:Change Subscriptions[] button.
 
 
