--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -71,7 +71,7 @@ In this procedure, you will also add the Live Patching child channels to your cl
 . At the command prompt on the client, as root, promote and clone the `dev-sles15-sp{sp-ver}-pool-x86_64` channel to a new testing channel:
 +
 ----
-# spacewalk-manage-channel-lifecycle -promote -c dev-sles15-sp{sp-ver}-pool-x86_64
+# spacewalk-manage-channel-lifecycle --promote -c dev-sles15-sp{sp-ver}-pool-x86_64
 ----
 . In the {productname} {webui}, select the client from menu:Systems[Overview], and navigate to the menu:Software[Software Channels] tab.
 . Check the new [systemitem]``test-sles15-sp3-pool-x86_64`` custom channel to change the base channel, and check both corresponding Live Patching child channels.
