--- a/modules/ROOT/pages/index-uyuni.adoc
+++ b/modules/ROOT/pages/index-uyuni.adoc
@@ -18,6 +18,7 @@ The Salt-master orchestrates thousands of Salt-minions ({productname} Clients) u
 
 The following documentation is available for {productname} version {productnumber}.
 
+////
 [cols=2*, options="header"]
 |===
 | Available Documentation | Formats
@@ -31,7 +32,18 @@ The following documentation is available for {productname} version {productnumbe
 | Retail Guide                  | xref:retail:retail-introduction.adoc[HTML] link:../pdf/uyuni_retail_guide.pdf[PDF]
 | Architecture                  | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/uyuni_architecture.pdf[PDF]
 |===
+////
 
+[cols=4*, options="header"]
+|===
+| Document | Format | Document | Format
+
+| Installation Guide | xref:installation:install-intro.adoc[HTML] link:../pdf/uyuni_installation_guide.pdf[PDF] | Administration Guide | xref:administration:intro.adoc[HTML] link:../pdf/uyuni_administration_guide.pdf[PDF]
+| Client Configuration Guide | xref:client-configuration:client-config-overview.adoc[HTML] link:../pdf/uyuni_client_configuration_guide.pdf[PDF] | Salt Guide | xref:salt:salt-intro.adoc[HTML] link:../pdf/uyuni_salt_guide.pdf[PDF]
+| Upgrade Guide | xref:upgrade:upgrade-overview.adoc[HTML] link:../pdf/uyuni_upgrade_guide.pdf[PDF] | Retail Guide | xref:retail:retail-introduction.adoc[HTML] link:../pdf/uyuni_retail_guide.pdf[PDF]
+| Reference Guide | xref:reference:intro.adoc[HTML] link:../pdf/uyuni_reference_manual.pdf[PDF] | |
+//| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/uyuni_architecture.pdf[PDF]
+|===
 
 
 
