--- a/modules/administration/pages/prometheus.adoc
+++ b/modules/administration/pages/prometheus.adoc
@@ -218,7 +218,7 @@ image::monitoring_configure_formula.png[scaledwidth=80%]
 
 The Grafana website contains dozens of dashboards uploaded by the community.
 For an example of the {productname} dashboard, see https://grafana.com/dashboards/10277.
-For more information about dashbords, see https://grafana.com/dashboards
+For more information about dashboards, see https://grafana.com/dashboards
 
 To use Grafana with {productname}, you must enable metrics in the {productname} {webui} and configure your Prometheus instance to collect those metrics.
 
