--- a/modules/administration/pages/live-patching-sles12.adoc
+++ b/modules/administration/pages/live-patching-sles12.adoc
@@ -41,26 +41,26 @@ Spacewalk Username: admin
 Spacewalk Password:
 Channel tree:
 
- 1. sles12-sp{sp-ver}-pool-x86_64
-      \__ sle-live-patching12-pool-x86_64-sp{sp-ver}
-      \__ sle-live-patching12-updates-x86_64-sp{sp-ver}
-      \__ sle-manager-tools12-pool-x86_64-sp{sp-ver}
-      \__ sle-manager-tools12-updates-x86_64-sp{sp-ver}
-      \__ sles12-sp{sp-ver}-updates-x86_64
+ 1. sles12-sp4-pool-x86_64
+      \__ sle-live-patching12-pool-x86_64-sp4
+      \__ sle-live-patching12-updates-x86_64-sp4
+      \__ sle-manager-tools12-pool-x86_64-sp4
+      \__ sle-manager-tools12-updates-x86_64-sp4
+      \__ sles12-sp4-updates-x86_64
 ----
 . Use the [command]``spacewalk-manage-channel`` command with the [option]``init`` argument to automatically create a new development clone of the original vendor channel:
 +
 ----
-spacewalk-manage-channel-lifecycle --init -c sles12-sp{sp-ver}-pool-x86_64
+spacewalk-manage-channel-lifecycle --init -c sles12-sp4-pool-x86_64
 ----
-. Check that [systemitem]``dev-sles12-sp{sp-ver}-updates-x86_64`` is available in your channel list.
+. Check that [systemitem]``dev-sles12-sp4-updates-x86_64`` is available in your channel list.
 
 Check the ``dev`` cloned channel you created, and remove any kernel updates that require a reboot.
 
 .Procedure: Removing Non-Live Kernel Patches from Cloned Channels
 
 . Check the current kernel version by selecting the minion from menu:Systems[System List], and taking note of the version displayed in the [guimenu]``Kernel`` field.
-. In the {productname} {webui}, select the minion from menu:Systems[Overview], navigate to the menu:Software[Manage > Channels] tab, and select [systemitem]``dev-sles12-sp{sp-ver}-updates-x86_64``.
+. In the {productname} {webui}, select the minion from menu:Systems[Overview], navigate to the menu:Software[Manage > Channels] tab, and select [systemitem]``dev-sles12-sp4-updates-x86_64``.
 Navigate to the [guimenu]``Patches`` tab, and click btn:[List/Remove Patches].
 . In the search bar, type [systemitem]``kernel`` and identify the kernel version that matches the kernel currently used by your minion.
 . Remove all kernel versions that are newer than the currently installed kernel.
@@ -70,13 +70,13 @@ In this procedure, you will also add the Live Patching child channels to your mi
 
 .Procedure: Promoting Live Patching Channels
 
-. At the command prompt on the minion, as `root`, promote and clone the `dev-sles12-sp{sp-ver}-pool-x86_64` channel to a new testing channel:
+. At the command prompt on the minion, as `root`, promote and clone the `dev-sles12-sp4-pool-x86_64` channel to a new testing channel:
 +
 ----
-# spacewalk-manage-channel-lifecycle --promote -c dev-sles12-sp{sp-ver}-pool-x86_64
+# spacewalk-manage-channel-lifecycle --promote -c dev-sles12-sp4-pool-x86_64
 ----
 . In the {productname} {webui}, select the minion from menu:Systems[Overview], and navigate to the menu:Software[Software Channels] tab.
-. Check the new [systemitem]``test-sles12-sp{sp-ver}-pool-x86_64`` custom channel to change the base channel, and check both corresponding Live Patching child channels.
+. Check the new [systemitem]``test-sles12-sp4-pool-x86_64`` custom channel to change the base channel, and check both corresponding Live Patching child channels.
 . Click btn:[Next], confirm that the details are correct, and click btn:[Confirm] to save the changes.
 
 You can now select and view available CVE patches, and apply these important kernel updates with Live Patching.
