--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -3,8 +3,6 @@
 
 
 
-
-
 [[at.k8s.integration.requires]]
 == Prerequisites
 
@@ -16,7 +14,7 @@ The prerequisites listed below should be met before proceeding.
 
 [NOTE]
 ====
-Required channels are present, a registered build host available etc.
+Required channels are present, a registered container build host available, etc.
 ====
 +
 
@@ -47,25 +45,24 @@ _Kubernetes_ clusters are registered with SUSE Manager as ``virtual host manager
 Registration and authorization begins with importing a `kubeconfig` file using Kubernetes official command line tool ``kubectl``.
 
 .Procedure: Registering a Kubernetes Cluster with {productname}
-. Select menu:Systems[Virtual Host Managers] from the navigation menu.
-. Expand the `Create` dropdown in the upper right corner of the page and select menu:Kubernetes Cluster[] .
-. Input a label for the new Virtual Host Manager.
-. Select the `kubeconfig` file which contains the required data for the Kubernetes cluster.
+. Select menu:Systems[Virtual Host Managers] from the main navigation menu of the {webui}.
+. Expand the `Create` drop-down menu in the upper right corner and select [guimenu]``Kubernetes Cluster``.
+. Enter a label for the new virtual host manager.
+. Select the `kubeconfig` file that Contains the required data for the Kubernetes cluster.
 . Select the correct _context_ for the cluster, as specified in the kubeconfig file.
-. Click ``Create``.
+. Click btn:[Create].
 
 
 
 [[at.view.the.list.of.nodes.in.a.cluster]]
 == View the List of Nodes in a Cluster
 
-
 . Select menu:Systems[Virtual Host Managers] from the navigation menu.
-. Select the desired Kubernetes cluster to view it.
+. Select the Kubernetes cluster to view it.
 . Node data is not refreshed during registration.
-To refresh node data, click on ``Schedule refresh data``.
+To refresh node data, click btn:[Schedule refresh data].
 . Refresh the browser.
-If the node data is not available wait a few moments and try again.
+If the node data is not available wait a few moments, and try again.
 
 
 
@@ -75,21 +72,20 @@ If the node data is not available wait a few moments and try again.
 
 See the following steps to find runtime data for images.
 
-. Select menu:Images[Images] from the navigation menu.
-. In the image list table, take notice of the new runtime columns.
-These are labeled: ``Revision``, `Runtime` and ``Instances``.
-Initially these columns will not provide useful data.
+. Select menu:Images[Image List] from the navigation menu.
+. In the image list table, the runtime columns are labeled ``Revision``, ``Runtime``, and ``Instances``.
+Initially, these columns do not provide useful data.
 
-** ``Revision``: An artificial sequence number which increments on every rebuild for manager-built images, or on every reimport for externally built images.
+** ``Revision``: An artificial sequence number that increments on every rebuild for manager-built images or on every re-import for externally built images.
 ** ``Runtime``: Overall status of the running instances of the image throughout the registered clusters.
 The status can be one of the following:
-*** All instances are consistent with SUSE Manager: All the running instances are running the same build of the image as tracked by SUSE Manager.
-*** Outdated instances found: Some of the instances are running an older build of the image.
+*** _All instances are consistent with SUSE Manager_: All the running instances are running the same build of the image as tracked by {productname}.
+*** _Outdated instances found_: Some of the instances are running an older build of the image.
 A redeploy of the image into the pod may be required.
-*** No information: The checksum of the instance image does not match the image data contained in SUSE Manager.
+*** _No information_: The checksum of the instance image does not match the image data contained in {productname}.
 A redeploy of the image into the pod may be required.
-** ``Instances``: Number of instances running this image across all the clusters registered in SUSE Manager.
-A breakdown of numbers can be seen by clicking on the pop-up icon next to the number.
+** ``Instances``: Number of instances running this image across all the clusters registered in {productname}.
+A breakdown of numbers can be seen by clicking the pop-up icon next to the number.
 
 
 
