--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -96,9 +96,9 @@ A breakdown of numbers can be seen by clicking the pop-up icon next to the numbe
 The following steps will help you build an image for deployment in Kubernetes.
 
 . Under menu:Images[Stores], create an image store.
-. Under menu:Images[Profiles], create an image profile (with a Dockerfile which is suitable to deploy to Kubernetes).
+. Under menu:Images[Profiles], create an image profile (with a Dockerfile that is suitable to deploy to Kubernetes).
 . Under menu:Images[Build], build an image with the new profile and wait for the build to finish.
-. Deploy the image into one of the registered Kubernetes clusters (via ``kubectl``).
+. Deploy the image into one of the registered Kubernetes clusters using ``kubectl``.
 . Notice the updated data in `Runtime` and `Instances` columns in the respective image row.
 
 
@@ -112,7 +112,7 @@ The following steps will guide you through importing a previously deployed image
 . Select an image that has already been deployed to any of your registered Kubernetes clusters.
 . Add the registry owning the image to SUSE Manager as an image store.
 . Select menu:Images[Images] , click `Import` from the top-right corner, fill in the form fields and click ``Import``.
-. Notice the updated data in `Runtime` and `Instances` columns in the respective image row.
+. Notice the updated data in the `Runtime` and `Instances` columns in the respective image row.
 
 
 
@@ -122,15 +122,17 @@ The following steps will guide you through importing a previously deployed image
 
 The following steps will help you find additional runtime data.
 
-. Select to menu:Images[Images] , click the `Details` button on the right end of a row which has running instances.
-. Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields under `Image Info` section.
+. Select menu:Images[Image List].
+. Click the `Details` button on the right end of a row that has running instances.
+. Under the `Overview` tab, notice the data in `Runtime` and `Instances` fields under the `Image Info` section.
 . Select the `Runtime` tab.
-. Here is a breakdown of the Kubernetes pods running this image in all the registered clusters including the following data:
+. In the `Runtime` tab is a breakdown of the Kubernetes pods running this image in all the registered clusters including the following data:
++
 
 ** Pod name
 ** Namespace which the pod resides in
 ** The runtime status of the container in the specific pod.
-Status icons are explained in the preceeding example.
+Status icons are explained in the next section.
 
 
 
@@ -138,9 +140,10 @@ Status icons are explained in the preceeding example.
 == Rebuild a Previously Deployed Image in Kubernetes
 
 
-The following steps will guide you through rebuilding an image which has been deployed to a Kubernetes cluster.
+The following steps will guide you through rebuilding an image that has been deployed to a Kubernetes cluster.
 
-. Go to menu:Images[Images] , click the Details button on the right end of a row which has running instances.
+. Go to menu:Images[Image List].
+. Click the `Details` button on the right end of a row that has running instances.
 The image must be manager-built.
 . Click the `Rebuild` button located under the `Build Status` section and wait for the build to finish.
 . Notice the change in the `Runtime` icon and title, reflecting the fact that now the instances are running a previous build of the image.
@@ -152,13 +155,13 @@ The image must be manager-built.
 
 [IMPORTANT]
 ====
-Currently, only kubeconfig files containing all embedded certificate data may be used with SUSE Manager
+Currently, only kubeconfig files containing all embedded certificate data may be used with {productname}.
 ====
 
 The API calls from {productname} are:
 
-* GET /api/v1/pods
-* GET /api/v1/nodes
+* ``GET /api/v1/pods``
+* ``GET /api/v1/nodes``
 
 According to this list, the minimum recommended permissions for {productname} should be as follows:
 
@@ -179,6 +182,6 @@ verbs: ["list"]
 ----
 
 
-Due to a a 403 response from /pods, the entire cluster will be ignored by SUSE Manager.
+Due to a a 403 response from ``/pods``, the entire cluster will be ignored by {productname}.
 
-For more information on working with RBAC Authorization see: https://kubernetes.io/docs/admin/authorization/rbac/
+For more information on working with RBAC Authorization, see https://kubernetes.io/docs/admin/authorization/rbac/.
