Updates per feedback, and adjusted order

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -64,5 +64,5 @@ In order to use the {webui} to manage your {susemgr} environment, you will need 
 {susemgr} is supported on:
 
 * Latest Firefox browser shipped with {slsa}
+* Latest Chrome browser on all operating systems
 * Latest Edge browser shipped with Windows
-* Latest Chrome/Chromium browser on all operating systems
