--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -46,7 +46,7 @@ Registration and authorization begins with importing a `kubeconfig` file using K
 
 .Procedure: Registering a Kubernetes Cluster with {productname}
 . Select menu:Systems[Virtual Host Managers] from the main navigation menu of the {webui}.
-. Expand the `Create` drop-down menu in the upper right corner and select [guimenu]``Kubernetes Cluster``.
+. In the [guimenu]``Create`` menu, select [guimenu]``Kubernetes Cluster``.
 . Enter a label for the new virtual host manager.
 . Select the `kubeconfig` file that Contains the required data for the Kubernetes cluster.
 . Select the correct _context_ for the cluster, as specified in the kubeconfig file.
