--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -48,7 +48,7 @@ Registration and authorization begins with importing a `kubeconfig` file using K
 . Select menu:Systems[Virtual Host Managers] from the main navigation menu of the {webui}.
 . In the [guimenu]``Create`` menu, select [guimenu]``Kubernetes Cluster``.
 . Enter a label for the new virtual host manager.
-. Select the `kubeconfig` file that Contains the required data for the Kubernetes cluster.
+. Select the `kubeconfig` file that contains the required data for the Kubernetes cluster.
 . Select the correct _context_ for the cluster, as specified in the kubeconfig file.
 . Click btn:[Create].
 
