--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -72,7 +72,7 @@ If the node data is not available wait a few moments, and try again.
 
 See the following steps to find runtime data for images.
 
-. Select menu:Images[Image List] from the navigation menu.
+. In the {productname} {webui}, navigate to menu:Images[Image List].
 . In the image list table, the runtime columns are labeled ``Revision``, ``Runtime``, and ``Instances``.
 Initially, these columns do not provide useful data.
 
