--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -96,7 +96,7 @@ A breakdown of numbers can be seen by clicking the pop-up icon next to the numbe
 The following steps will help you build an image for deployment in Kubernetes.
 
 . Under menu:Images[Stores], create an image store.
-. Under menu:Images[Profiles], create an image profile (with a Dockerfile that is suitable to deploy to Kubernetes).
+. In menu:Images[Profiles], create an image profile (with a Dockerfile that is suitable to deploy to Kubernetes).
 . Under menu:Images[Build], build an image with the new profile and wait for the build to finish.
 . Deploy the image into one of the registered Kubernetes clusters using ``kubectl``.
 . Notice the updated data in `Runtime` and `Instances` columns in the respective image row.
