--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -155,7 +155,7 @@ The image must be manager-built.
 
 [IMPORTANT]
 ====
-Currently, only kubeconfig files containing all embedded certificate data may be used with {productname}.
+Currently, only kubeconfig files containing all embedded certificate data can be used with {productname}.
 ====
 
 The API calls from {productname} are:
