Admin live content review3 #8361 ke (#587)
* hardcode SLES 12 SP version: sp4

--- a/modules/administration/pages/live-patching-sles12.adoc
+++ b/modules/administration/pages/live-patching-sles12.adoc
@@ -8,24 +8,24 @@ For in depth information covering kGraft use, see https://www.suse.com/documenta
 Before you begin, ensure:
 
 * {productname} is fully updated
-* You have one or more Salt clients running {slsa}{nbsp}12 (SP1 or later)
-* Your {slsa}{nbsp}12 Salt clients are registered with {productname}
+* You have one or more Salt minions running {slsa}{nbsp}12 (SP1 or later)
+* Your {slsa}{nbsp}12 Salt minions are registered with {productname}
 * You have access to the {slsa}{nbsp}12 channels appropriate for your architecture, including the Live Patching child channel (or channels)
-* The clients are fully synchronized
+* The minions are fully synchronized
 
 .Procedure: Setting up for Live Patching
 
-. Select the client you want to manage with Live Patching from menu:Systems[Overview], and navigate to the menu:Software[Packages > Install] tab.
+. Select the minion you want to manage with Live Patching from menu:Systems[Overview], and on the system details page navigate to the menu:Software[Packages > Install] tab.
 Search for the [systemitem]``kgraft`` package, and install it.
 +
 image::enable_live_patching_kgraft_install.png[scaledwidth=80%]
-. Apply the highstate to enable Live Patching, and reboot the client.
-. Repeat for each client that you want to manage with Live Patching.
-. To check that Live Patching has been enabled correctly, select the client from menu:Systems[Systems List], and ensure that [systemitem]``Live Patching`` appears in the [guimenu]``Kernel`` field.
+. Apply the highstate to enable Live Patching, and reboot the minion.
+. Repeat for each minion that you want to manage with Live Patching.
+. To check that Live Patching has been enabled correctly, select the minion from menu:Systems[System List], and ensure that [systemitem]``Live Patching`` appears in the [guimenu]``Kernel`` field.
 
 
-When you have the Live Patching channel installed on the client, you can clone the default vendor channel.
-This cloned channel will be used to manage Live Patching on your clients.
+When you have the Live Patching channel installed on the minion, you can clone the default vendor channel.
+This cloned channel will be used to manage Live Patching on your minions.
 
 Cloned vendor channels should be prefixed by ``dev`` for development, ``testing``, or  ``prod`` for production.
 In this procedure, you will create a ``dev`` cloned channel, and later, you will need to promote the channel to ``testing``.
@@ -33,7 +33,7 @@ In this procedure, you will create a ``dev`` cloned channel, and later, you will
 
 .Procedure: Cloning Live Patching Channels
 
-. At the command prompt on the client, as root, obtain the current package channel tree:
+. At the command prompt on the minion, as `root`, obtain the current package channel tree:
 +
 ----
 # spacewalk-manage-channel-lifecycle --list-channels
@@ -41,55 +41,57 @@ Spacewalk Username: admin
 Spacewalk Password:
 Channel tree:
 
- 1. sles12-sp{sp-ver}-pool-x86_64
-      \__ sle-live-patching12-pool-x86_64-sp{sp-ver}
-      \__ sle-live-patching12-updates-x86_64-sp{sp-ver}
-      \__ sle-manager-tools12-pool-x86_64-sp{sp-ver}
-      \__ sle-manager-tools12-updates-x86_64-sp{sp-ver}
-      \__ sles12-sp{sp-ver}-updates-x86_64
+ 1. sles12-sp4-pool-x86_64
+      \__ sle-live-patching12-pool-x86_64-sp4
+      \__ sle-live-patching12-updates-x86_64-sp4
+      \__ sle-manager-tools12-pool-x86_64-sp4
+      \__ sle-manager-tools12-updates-x86_64-sp4
+      \__ sles12-sp4-updates-x86_64
 ----
-. Use the [command]``spacewalk-manage-channel`` command with the [command]``init`` argument to automatically create a new development clone of the original vendor channel:
+. Use the [command]``spacewalk-manage-channel`` command with the [option]``init`` argument to automatically create a new development clone of the original vendor channel:
 +
 ----
-spacewalk-manage-channel-lifecycle --init -c sles12-sp{sp-ver}-pool-x86_64
+spacewalk-manage-channel-lifecycle --init -c sles12-sp4-pool-x86_64
 ----
-. Check that [systemitem]``dev-sles12-sp{sp-ver}-updates-x86_64`` is available in your channel list.
+. Check that [systemitem]``dev-sles12-sp4-updates-x86_64`` is available in your channel list.
 
-Now you can check the ``dev`` cloned channel you created, and remove any kernel updates that require a reboot.
+Check the ``dev`` cloned channel you created, and remove any kernel updates that require a reboot.
 
 .Procedure: Removing Non-Live Kernel Patches from Cloned Channels
 
-. Check the current kernel version by selecting the client from menu:Systems[Systems List], and taking note of the version displayed in the [guimenu]``Kernel`` field.
-. In the {productname} {webui}, select the client from menu:Systems[Overview], navigate to the menu:Software[Manage > Channels] tab, and select [systemitem]``dev-sles12-sp{sp-ver}-updates-x86_64``.
+. Check the current kernel version by selecting the minion from menu:Systems[System List], and taking note of the version displayed in the [guimenu]``Kernel`` field.
+. In the {productname} {webui}, select the minion from menu:Systems[Overview], navigate to the menu:Software[Manage > Channels] tab, and select [systemitem]``dev-sles12-sp4-updates-x86_64``.
 Navigate to the [guimenu]``Patches`` tab, and click btn:[List/Remove Patches].
-. In the search bar, type [systemitem]``kernel`` and identify the kernel version that matches the kernel currently used by your client.
+. In the search bar, type [systemitem]``kernel`` and identify the kernel version that matches the kernel currently used by your minion.
 . Remove all kernel versions that are newer than the currently installed kernel.
 
 Your channel is now set up for Live Patching, and can be promoted to ``testing``.
-In this procedure, you will also add the Live Patching child channels to your client, ready to be applied.
+In this procedure, you will also add the Live Patching child channels to your minion, ready to be applied.
 
 .Procedure: Promoting Live Patching Channels
 
-. At the command prompt on the client, as root, promote and clone the `dev-sles12-sp{sp-ver}-pool-x86_64` channel to a new testing channel:
+. At the command prompt on the minion, as `root`, promote and clone the `dev-sles12-sp4-pool-x86_64` channel to a new testing channel:
 +
 ----
-# spacewalk-manage-channel-lifecycle --promote -c dev-sles12-sp{sp-ver}-pool-x86_64
+# spacewalk-manage-channel-lifecycle --promote -c dev-sles12-sp4-pool-x86_64
 ----
-. In the {productname} {webui}, select the client from menu:Systems[Overview], and navigate to the menu:Software[Software Channels] tab.
-. Check the new [systemitem]``test-sles12-sp3-pool-x86_64`` custom channel to change the base channel, and check both corresponding Live Patching child channels.
-. Click btn:[Next], confirm that the details are correct, and click btn:[Confirm] to  save the changes.
+. In the {productname} {webui}, select the minion from menu:Systems[Overview], and navigate to the menu:Software[Software Channels] tab.
+. Check the new [systemitem]``test-sles12-sp4-pool-x86_64`` custom channel to change the base channel, and check both corresponding Live Patching child channels.
+. Click btn:[Next], confirm that the details are correct, and click btn:[Confirm] to save the changes.
 
 You can now select and view available CVE patches, and apply these important kernel updates with Live Patching.
 
 .Procedure: Applying Live Patches to a Kernel
 
-. In the {productname} {webui}, select the client from menu:Systems[Overview].
-You will see  a banner at the top of the screen showing the number of critical and non-critical packages available for the client:
+. In the {productname} {webui}, select the minion from menu:Systems[Overview].
+You will see a banner at the top of the screen showing the number of critical and non-critical packages available for the minion:
++
 image::live_patching_criticalupdates.png[scaledwidth=80%]
+
 . Click btn:[Critical] to see a list of the available critical patches.
 . Select any patch with a synopsis reading [guimenu]``Important: Security update for the Linux kernel``.
 Security bugs will also include their CVE number, where applicable.
-. OPTIONAL: If you know the CVE number of a patch you want to apply, you can search for it in menu:Audit[CVE Audit], and apply the patch to any clients that require it.
+. OPTIONAL: If you know the CVE number of a patch you want to apply, you can search for it in menu:Audit[CVE Audit], and apply the patch to any minions that require it.
 
 [IMPORTANT]
 ====
