--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -2,7 +2,7 @@
 = Offline Use
 
 If the {susemgr} Server is offline, you can still perform a reboot on the terminals.
-If the connection between the branch server and the terminals is lost or unstable, you can still perform an update on the terminals, using caching.
+If the connection between the branch server and the terminals is unstable or has low bandwidth, you can still perform an update on the terminals, using caching.
 
 [IMPORTANT]
 ====
@@ -15,16 +15,25 @@ You must have the Saltboot and PXE formula packages installed.
 If the {susemgr} Server is offline, and a terminal is rebooted, it will fall back to a previously installed image.
 
 This will occur in these situations:
-* If the saltboot.py module on the {susemgr} Server has not been synchronized within a specified time (default value is 60 seconds).
-This is the first step in the usual salt boot procedure, so if it fails, it indicates that there is a problem with the {susemgr} Server.
-* If the {susemgr} Server does not wait for the salt key to be accepted by the terminal.
+* If the Saltboot formula has not started within a specified time (default value is 60 seconds).
+* If the terminal does not acknowledge that the Saltboot formula has started.
 * If the root partition is specified on the kernel command line (handled by the PXE formula), is mountable (and is not encrypted), and contains [path]``/etc/ImageVersion`` (which is created by Kiwi).
+
+The timeout configuration option is in the [filename]``/etc/rhn/rhn.conf`` configuration file.
+The parameter is measured in seconds, and defaults to [systemitem]``60``.
+
+----
+SALT_TIMEOUT = 60
+----
+
+When you set this parameter, it will come into effect only when packages are synchronized.
+You might like to delete the cached data to remove older data.
 
 
 
 == Offline Terminal Updates
 
-If there is limited bandwidth between the branch server and the terminal, for example if the branch server is not in the same location as the terminal, then images can be cached in advance, and the upgrade performed on the terminals later on, without a network connection.
+If there is low bandwidth or an unstable connection between the branch server and the terminal, images can be cached in advance and the upgrade performed on the terminals later on.
 
 To set this up:
 
