Add uefi boot note

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -67,6 +67,10 @@ For more information, see the documentation of the underlying system (in this ca
 
 For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration/client-config-overview.adoc[]).
 
+{smr} supports PoS terminals that boot using both BIOS and uEFI.
+For uEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
+For more information on EFI in the Saltboot formula, see xref:retail:retail-formula-saltboot.adoc[].
+
 
 
 [[retail.sect.components.fitting]]
