--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -67,8 +67,8 @@ For more information, see the documentation of the underlying system (in this ca
 
 For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration/client-config-overview.adoc[]).
 
-{smr} supports PoS terminals that boot using both BIOS and uEFI.
-For uEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
+{smr} supports PoS terminals that boot using both BIOS and UEFI.
+For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
 For more information on EFI in the Saltboot formula, see xref:retail:retail-formula-saltboot.adoc[].
 
 
@@ -76,13 +76,13 @@ For more information on EFI in the Saltboot formula, see xref:retail:retail-form
 [[retail.sect.components.fitting]]
 == Fitting It All Together
 
-
 {smr} uses the same technology as {susemgr}, but is customized to address the needs of retail organizations.
 
 
 
 [[retail.sect.components.fitting.hardware-types]]
 === Hardware Types
+
 Because every environment is different, and can contain many different configurations of many different terminals, {smr} uses hardware types to simplify device management.
 
 Hardware types allow you to group devices according to manufacturer and device name, so that all devices of a particular type can be managed as one.
