Update per feedback + fix on kernel deflist

--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -19,7 +19,7 @@ This will occur in these situations:
 * If the terminal does not acknowledge that the Saltboot formula has started.
 * If the root partition is specified on the kernel command line (handled by the PXE formula), is mountable (and is not encrypted), and contains [path]``/etc/ImageVersion`` (which is created by Kiwi).
 
-The timeout configuration option is in the [filename]``/etc/rhn/rhn.conf`` configuration file.
+You can adjust the timeout value by changing the [parameter]``SALT_TIMEOUT`` kernel parameter.
 The parameter is measured in seconds, and defaults to [systemitem]``60``.
 
 ----
@@ -29,6 +29,7 @@ SALT_TIMEOUT = 60
 When you set this parameter, it will come into effect only when packages are synchronized.
 You might like to delete the cached data to remove older data.
 
+For more about kernel parameters, see xref:retail:retail-formula-pxe.adoc[].
 
 
 == Offline Terminal Updates
